Fix homepage alignment issues

--- a/packages/cd-components/src/organisms/post/post.module.scss
+++ b/packages/cd-components/src/organisms/post/post.module.scss
@@ -55,7 +55,7 @@
     "sidebar header  header"
     "sidebar content content"
     "sidebar footer  footer";
-  width: 38.51rem;
+  width: 100%;
   height: max-content;
   background: rgba(255, 255, 255, 0.85);
   box-shadow: 2px 2px 23px rgba(0, 0, 0, 0.2);
