--- a/packages/cd-student/src/Base.module.scss
+++ b/packages/cd-student/src/Base.module.scss
@@ -4,61 +4,67 @@
 
 .container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-top: 1.5rem;
 
-  .left_sidebar {
+  .content {
     display: flex;
-    flex-direction: column;
-    width: 16.5rem;
-    margin-left: 1rem;
+    justify-content: space-between;
+    width: 80vw;
 
-    .spaces_section {
-      margin-top: 1.75rem;
-      width: 100%;
+    .left_sidebar {
+      display: flex;
+      flex-direction: column;
+      width: 16.5rem;
+      margin-left: 1rem;
 
-      .my_spaces_heading {
-        font-size: $medium;
-        font-weight: 600;
-        color: $dark-grey;
-        margin-bottom: 0.35rem;
-      }
+      .spaces_section {
+        margin-top: 1.75rem;
+        width: 100%;
 
-      .spaces_list {
-        color: $primary-blue;
+        .my_spaces_heading {
+          font-size: $medium;
+          font-weight: 600;
+          color: $dark-grey;
+          margin-bottom: 0.35rem;
+        }
 
-        .space_name {
-          margin-top: 0.2rem;
-          cursor: pointer;
+        .spaces_list {
+          color: $primary-blue;
+
+          .space_name {
+            margin-top: 0.2rem;
+            cursor: pointer;
+          }
         }
       }
     }
-  }
 
-  .right_sidebar {
-    width: 16.5rem;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
-    .btns_container {
+    .right_sidebar {
+      width: 16.5rem;
+      height: 90vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      justify-content: space-around;
 
-      .btn {
-        margin: 0.5rem;
+      .btns_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .btn {
+          margin: 0.5rem;
+        }
       }
-    }
 
-    .card_list {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      .card_list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
-      .card:first-of-type {
-        margin-bottom: 2rem;
+        .card:first-of-type {
+          margin-bottom: 2rem;
+        }
       }
     }
   }
