--- a/packages/cd-student/src/pages/home/home.module.scss
+++ b/packages/cd-student/src/pages/home/home.module.scss
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  flex: 1;
+  padding: 0 8rem;
 
   .sort_option {
     border-radius: $normal-border-radius;
